# Lastro.AI

./: .gitignore  README.md  chainlit.md  main.py  pyproject.toml
.chainlit/: config.toml
lastro_ai/: cli.py  config.py
lastro_ai/agent/: core.py
lastro_ai/agent/prompts/: slm.toml
lastro_ai/agent/services/: __init__.py  groq.py  model_factory.py  ollama.py
lastro_ai/agent/tools/: retrieval.py
lastro_ai/core/: embedding.py  evaluator.py  extracting.py  ingestion.py  prompts.py
lastro_ai/prompts/: agent.toml  evaluation.toml
lastro_ai/web/: __init__.py  app.py  messages.py
